[metadata]
name = dg-flatscoring
description = My own library to score flats based on few metrics
author = Dawid Gosławski
url = https://github.com/alkuzad/flatscoring
long_description = file:README.md
license = GPLv2
classifiers =
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.10
[options]
include_package_data = True

package_dir=
    =src
packages=find:
install_requires =
    traveltimepy @ git+https://@github.com/traveltime-dev/traveltime-python-sdk@26d69d9cefe5feb099e9cdeb991bf12ed2c859cf
    loguru == 0.6.0
    click == 8.0.3
    PyYAML == 6.0
python_requires = >3.10.0
setup_requires =
    types-PyYaml == 6.0

[options.entry_points]
console_scripts =
    flatscoring-traveltime = flatscoring.cli:calculate-traveltime

[options.packages.find]
where=src
exclude =
    test
    *.test
    *.test.*
    test.*

[tox:tox]
isolated_build = True
envlist = py39

[testenv]
deps =
    pytest
    pytest-mock
commands = pytest